--- a/layouts/partials/head_includes.html
+++ b/layouts/partials/head_includes.html
@@ -29,7 +29,7 @@
 {{ else }}
 <link href={{"css/orange.css" | absURL }} rel="stylesheet">
 {{ end }}
-<link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Asul" rel="stylesheet">
 <!-- Custom CSS -->
 {{ range .Site.Params.custom_css }}
     <link rel="stylesheet" href="{{ . | absURL }}">
