--- a/layouts/partials/advisors.html
+++ b/layouts/partials/advisors.html
@@ -5,23 +5,23 @@
   </div>
   <div class = "row">
     <div class = "col-md-12">
-    {{ range where .Site.Pages.ByTitle "Type" "host" }}
+    {{ range where .Site.Pages.ByTitle "Type" "advisor" }}
     {{- if ne .Params.hide "true" -}}
       {{- if not (in .File.BaseFileName "_index") -}}
         <div class="row person_row">
             <div class="col-md-3">
               {{- if and (isset .Params "thumbnail") (ne .Params.thumbnail "") -}}
                 {{- if (eq (slicestr .Params.thumbnail 0 4) "http") -}}
-                  <a href = "{{(printf "host/%s/" .File.BaseFileName) | absURL }}"><img alt="{{ .Title }}" src="{{ .Params.thumbnail }}" class="img-fluid" width="250px"></a>
+                  <a href = "{{(printf "advisor/%s/" .File.BaseFileName) | absURL }}"><img alt="{{ .Title }}" src="{{ .Params.thumbnail }}" class="img-fluid" width="250px"></a>
                   {{- else -}}
-                  <a href = "{{(printf "host/%s/" .File.BaseFileName) | absURL }}"><img alt="{{ .Title }}" src="{{ .Params.thumbnail | absURL}}" class="img-fluid" width="250px"></a>
+                  <a href = "{{(printf "advisor/%s/" .File.BaseFileName) | absURL }}"><img alt="{{ .Title }}" src="{{ .Params.thumbnail | absURL}}" class="img-fluid" width="250px"></a>
                 {{- end -}}
                 {{- else -}}
-                <a href = "{{(printf "host/%s/" .File.BaseFileName) | absURL }}"><img alt="{{ .Title }}" src="{{ "img/host/default-host.png" | absURL }}" class="img-fluid" width="250px"/></a>
+                <a href = "{{(printf "advisor/%s/" .File.BaseFileName) | absURL }}"><img alt="{{ .Title }}" src="{{ "img/host/default-host.png" | absURL }}" class="img-fluid" width="250px"/></a>
               {{- end -}}
             </div>
             <div class= "col-md-6">
-              <h3><a href = "{{(printf "host/%s/" .File.BaseFileName) | absURL }}">{{ .Title }}</a></h3>
+              <h3><a href = "{{(printf "advisor/%s/" .File.BaseFileName) | absURL }}">{{ .Title }}</a></h3>
               <p>{{ .Content }}</p>
               {{ with .Params.Website }}
                 <a href = "{{ . }}"><i class="fas fa-home fa-2x"></i></a>
