--- a/layouts/advisor/single.html
+++ b/layouts/advisor/single.html
@@ -2,7 +2,7 @@
 <div class = "hero_container">
 <div class="row">
   <div class="col">
-    <h1>AD{{ title .Title }}</h1>
+    <h1>{{ title .Title }}</h1>
   </div>
 </div>
 
