--- a/layouts/partials/row.html
+++ b/layouts/partials/row.html
@@ -4,7 +4,7 @@
   {{ end }}
 {{ end }}
 <div class="row hero_container">
-
+	<h1><b>Data Analytics Colloquium</b></h1>
   <div class="col-md-12">
   <h2>
   Upcoming webinars
