--- a/layouts/partials/jumbotron.html
+++ b/layouts/partials/jumbotron.html
@@ -4,6 +4,7 @@
     <div class="row">
         <div class="col">
             <p>
+            <h1><b>Data Analytics Colloquium</b></h1>
                 {{ .Site.Params.description | markdownify }}
               </p>
         </div>
