--- a/layouts/partials/jumbotron.html
+++ b/layouts/partials/jumbotron.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col">
             <p>
-            <h1><b>Data Analytics Colloquium</b></h1>
+            <img src="/img/DACbanner.png" alt="Data Analytics Colloquium">
                 {{ .Site.Params.description | markdownify }}
               </p>
         </div>
