--- a/static/css/blue.css
+++ b/static/css/blue.css
@@ -3561,13 +3561,13 @@ input[type="button"].btn-block {
     box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
 
 .jumbotron {
-  padding: .5rem .5rem;
+  padding: 2rem 1rem;
   margin-bottom: 2rem;
   background-color: #e9ecef;
   border-radius: 0.3rem; }
   @media (min-width: 576px) {
     .jumbotron {
-      padding: 4rem 2rem; } }
+      padding: .5rem .5rem; } }
 
 .jumbotron-fluid {
   padding-right: 0;
