--- a/static/css/blue.css
+++ b/static/css/blue.css
@@ -3567,7 +3567,7 @@ input[type="button"].btn-block {
   border-radius: 0.3rem; }
   @media (min-width: 576px) {
     .jumbotron {
-      padding: .5rem .5rem; } }
+      padding: 0rem 0rem; } }
 
 .jumbotron-fluid {
   padding-right: 0;
