--- a/layouts/partials/row.html
+++ b/layouts/partials/row.html
@@ -6,7 +6,7 @@
 <div class="row hero_container">
   <div class="col-md-12">
   <h2>
-  Upcoming webinars
+  Upcoming webinars (Click on title to REGISTER)
   </h2>
 
   {{ range first 1 (where site.RegularPages "Type" "in" site.Params.mainSections) }}
